--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./index.css">
     <title>vue-skills</title>
   </head>
-  <body>
+  <body id="body">
     <noscript>
       <strong>We're sorry but vue-skills doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
